[package]
name = "test-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
once_cell = "1.19.0"
rand = "0.8.5"
rustls = { version = "0.23.12", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2.1.2"
tokio = { version = "1.39.1", features = ["full"] }
tokio-rustls = { version = "0.26.0", default-features = false }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sha2 = "0.10"
base16ct = { version = "0.2", features = ["alloc"] }
clap = { version = "4.5.10", features = ["derive"] }