[package]
name = "test-web-server"
version = "0.1.0"
edition = "2024"

[features]
sha256 = ["dep:sha2", "dep:base16ct"]
crc32 = ["dep:crc32fast", "dep:base16ct"]
default = ["sha256", "crc32"]


[dependencies]
axum = "0.8"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
once_cell = "1.19.0"
rand = "0.9"
rustls = { version = "0.23.12", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2.1.2"
tokio = { version = "1.39.1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.10", features = ["derive"] }
sha2 = { version = "0.10", optional = true }
crc32fast = { version = "1.4", optional = true }
base16ct = { version = "0.2", features = ["alloc"], optional = true }

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "bench_main"
harness = false
